# MySQLite

./: .gitignore  CMakeLists.txt  README.md  jluCppStyle.astylerc  main.cpp
src/MySQLite/: CMakeLists.txt
src/MySQLite/include/: mysqlite.h
src/MySQLite/src/: mysqlite.cpp
src/mySQLite/: CMakeLists.txt
src/mySQLite/include/: mysqlite.h
src/mySQLite/src/: mysqlite.cpp
test/: CMakeLists.txt  MySqliteTest.cpp
